# GraphicsAPIAbstraction

./: .gitignore  CMakeLists.txt  cmake_install.cmake
src/API/core/: Buffer.cpp  Buffer.h  Framebuffer.cpp  Framebuffer.h  Renderer.cpp  Renderer.h  RendererAPI.h  RendererCommand.h  VertexArray.h  VertexBufferLayout.cpp
src/API/legacy/: LegacyRenderer.cpp
src/API/renderer/: LineRenderer.hpp
src/Debug/: Debug.cpp
src/Misc/structs/: Helper.hpp
src/Platform/OpenGL/advanced/: SSAO_OpenGL.cpp  ShadowMap_OpenGL.cpp
src/Platform/OpenGL/core/: Buffer_OpenGL.cpp  Buffer_OpenGL.h  Framebuffer_OpenGL.cpp  Framebuffer_OpenGL.h  IndexBuffer_OpenGL.cpp  RendererAPI_OpenGL.cpp  RendererAPI_OpenGL.h  Shader_OpenGL.cpp  VertexArray_OpenGL.cpp  VertexBuffer_OpenGL.cpp
src/Platform/OpenGL/texture/: Texture_OpenGL.cpp
